# pIceImarisConnector

./: .gitignore  .project  .pydevproject  .readthedocs.yml  MANIFEST.in  README.md  README.txt  build_documentation.bat  build_pip_package.bat  build_win_installer.bat  pyproject.toml  setup.py  upload_pip_package.bat  upload_pip_package_to_production_pypi.bat  upload_pip_package_to_test_pypi.bat
doc/: .gitignore  .readthedocs.yml  conf.py  index.rst  make.bat
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat  usage.rst
pIceImarisConnector/: __init__.py  pIceImarisConnector.py
pIceImarisConnector/test/: HelloWorldXT.py  SwimmingAlgae.ims  TestPIcePyramidalCellXT.py  TestPIceSwimmingAlgaeXT.py  TestStaticMethods.py
src/: .gitignore  main.py  pIceImarisConnector.py  pIceImarisConnectorTestUnit.py  setup.py
src/pIceImarisConnector/: __init__.py  gpl-2.0.txt  main.py  pIceImarisConnector.py  setup.py
src/pIceImarisConnectorTestUnit/: gpl-2.0.txt  pIceImarisConnectorTestUnit.py  setup.py
test/: HelloWorldXT.py  TestPIceOne.py  TestPIcePyramidalCellXT.py  TestPIceSwimmingAlgaeXT.py  TestPIceTwo.py  TestStaticMethods.py  test_pIceImarisConnector.py
