[tool.poetry]
name = "pIceImarisConnector"
version = "0.4.2b7"
description = "IceImarisConnector for python (pIceImarisConnector) is a simple commodity class that eases communication between Bitplane Imaris and python using the Imaris XT interface."
authors = ["Aaron Ponti <aaron.ponti@bsse.ethz.ch>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/aarpon/pIceImarisConnector"
documentation = "https://piceimarisconnector.readthedocs.io"
keywords=["Imaris", "ImarisXT", "python", "Ice"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aarpon/pIceImarisConnector/issues"

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
numpy = "^1.16.6"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
